branches/wip/Archive/76e30fc9d505b2a9f5a1e33e3c51d17d-69bf926bd8b41648db61a57b8aec5204/output
+ g++-4.8 -c -std=c++11 -O2 -Wall -pedantic main.cpp
main.cpp: In function 'std::future<std::basic_string<char> > get_resource(const string&)':
main.cpp:12:16: error: could not convert 'cached_result' from 'std::string {aka std::basic_string<char>}' to 'std::future<std::basic_string<char> >'
         return cached_result; // how to wrap in std::future?
                ^
main.cpp:15:30: error: too few arguments to function 'std::future<std::basic_string<char> > get_resource_impl(const string&)'
     return get_resource_impl();
                              ^
main.cpp:3:26: note: declared here
 std::future<std::string> get_resource_impl(const std::string& name);
                          ^
main.cpp:16:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
